fix broken styles

--- a/services/frontend-v3/src/components/resultsCard/ResultsCardView.scss
+++ b/services/frontend-v3/src/components/resultsCard/ResultsCardView.scss
@@ -1,20 +1,20 @@
 .small-p {
-  margin: 0;
-  margin-top: -10;
+  margin: 0px;
+  margin-top: -10px;
 }
 
 .divider {
   height: auto;
-  margin-right: 20;
-  margin-top: 4;
+  margin-right: 20px;
+  margin-top: 4px;
 }
 .tag {
   margin-bottom: 2px;
   margin-top: 2px;
 }
 .meta {
-  margin: 0;
-  margin-right: 20;
+  margin: 0px;
+  margin-right: 20px;
 }
 .avatar-text {
   font-size: 20px;
@@ -27,12 +27,12 @@
   flex-direction: column;
 }
 .container {
-  max-width: 1600;
+  max-width: 1600px;
 }
 .button-icon {
   font-size: 16px;
   margin-right: 5px !important;
 }
 .button {
-  margin: -10px 0;
+  margin: -10px 0px;
 }
